src/fhiclcpp/fhiclcpp/test/testFiles/pass/adv_ref4_pass.fcl
BEGIN_PROLOG
t:{ a:1 }
t.a: 5
END_PROLOG
t.b: 3
