src/fhiclcpp/fhiclcpp/test/testFiles/fail/prolog_fail.fcl
a :5
BEGIN_PROLOG
b :6
END_PROLOG
